codex-rs/tui_app_server/src/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已执行 first_token_is_long
  │ _enough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ （无输出）
