codex-rs/tui_app_server/src/snapshots/codex_tui__history_cell__tests__ps_output_empty_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

后台终端

  • 当前没有运行中的后台终端。
