codex-rs/tui_app_server/src/snapshots/codex_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
/ps

后台终端

  • rg "foo" src --glob '**/*. [...]
    ↳ searching...
